fix(geo/search-bar): adjust search bar overflow on mobile

--- a/src/app/pages/portal/portal.component.scss
+++ b/src/app/pages/portal/portal.component.scss
@@ -28,7 +28,6 @@
     flex: 1;
     background-color: $app-background-color;
     font-size: 16px;
-    margin-left: $igo-margin;
   }
 
   igo-menu-button {
